End of section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "nhannguyen",
+    "ApiKey": "111158673921365",
+    "ApiSecret": "zuhIq0rzx7a0UkVIeJCgbRSi-AA"
+  }
 }
